src/objects/National_TS_RFP_Task_Stage_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for mapping ThoughtStarter and RFP completed tasks to Opportunity Stage Updates</description>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Purpose__c</fullName>
        <label>Task Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>National TS RFP Task Stage Mapping</label>
</CustomObject>